# aegis

./: .gitignore  build_zipapp.sh
.github/workflows/: build.py  main.yml
aegis-core/: pyproject.toml
aegis-core/src/aegis_core/ast/: helpers.py  metadata.py
aegis-core/src/aegis_core/ast/features/: provider.py
aegis-core/src/aegis_core/reflection/: __init__.py  type_representation.py
aegis-server/: pyproject.toml
aegis-server/src/aegis_server/providers/: __init__.py  generic.py  resource_location.py  variable.py
aegis-server/src/aegis_server/server/: __init__.py
aegis-server/src/aegis_server/server/features/: definition.py  helpers.py  hover.py  references.py  validate.py
aegis-server/src/aegis_server/server/indexing/: __init__.py  typing.py
aegis-server/src/aegis_server/server/patches/: __init__.py
aegis-vscode/: package-lock.json  package.json
aegis-vscode/resources/: beet_check.py
aegis-vscode/src/: extension.ts
